[package]
name = "pwned"
version = "0.1.0"
authors = ["Joao Veiga <joao@fishbrain.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10" }
sha = "1.0"
tokio = { version = "0.2", features = ["macros"]}
tracing = "0.1"
tracing-subscriber = "0.2.10"
clap = "2.33.3"
